plugins {
    id 'application'
    id 'com.gradleup.shadow' version '9.6.1'
}

group = 'doggo'
version = '0.5.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
dependencies {
    String javaFxVersion = '26.0.1'

    implementation 'org.xerial:sqlite-jdbc:3.53.4.0'

    implementation("org.openjfx:javafx-base:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-base:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-base:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:linux")

    testImplementation platform('org.junit:junit-bom:6.1.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'doggo.ui.javafx.DoggoLauncher'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

tasks.register('runCli', JavaExec) {
    group = 'application'
    description = 'Runs the doggo command-line application.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'doggo.Doggo'
    standardInput = System.in
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

shadowJar {
    archiveClassifier = ''
    manifest {
        attributes 'Main-Class': application.mainClass.get(),
                'Enable-Native-Access': 'ALL-UNNAMED'
    }
}
